<resources>
    <string name="app_name">MiniLinkedIn</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>

    <string name="section_education">Education</string>
    <string name="section_skills">Skills</string>
    <string name="section_projects">Projects</string>
    <string name="section_experience">Experience</string>

    <string name="user_picture">User picture</string>
    <string name="choose_user_picture">Choose user picture</string>

    <string name="basic_info_edit_email_hint">Your email</string>
    <string name="basic_info_edit_name_hint">Your name</string>

    <string name="add_education">Add education</string>
    <string name="add_skill">Add skill</string>
    <string name="add_project">Add project</string>
    <string name="add_experience">Add experience</string>

    <string name="edit_education">Edit education</string>
    <string name="edit_skill">Edit skill</string>
    <string name="edit_project">Edit project</string>
    <string name="edit_experience">Edit experience</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="skill_edit_languages_hint">Languages</string>
    <string name="skill_edit_techniques_hint">Techniques</string>
    <string name="skill_edit_databases_hint">Databases</string>
    <string name="skill_edit_big_data_hint">Big Data Ecosystems</string>
    <string name="skill_edit_tools_hint">Tools</string>
    <string name="education_edit_school_hint">School</string>
    <string name="education_edit_major_hint">Major</string>
    <string name="education_edit_courses_hint">Courses</string>
    <string name="project_edit_name_hint">Project name</string>
    <string name="project_edit_details_hint">Details</string>
    <string name="experience_edit_what_did_you_do_hint">What did you do</string>
    <string name="experience_edit_title_hint">Title</string>
    <string name="experience_edit_company_hint">Company</string>
</resources>
